Menu overflow correction
Corrected data to retain on position

--- a/dsc.css
+++ b/dsc.css
@@ -1,6 +1,6 @@
 .emptyDSC{
     display: none !important;
 }
-.ytd-menu-renderer{
+.overflowDSC{
     overflow: hidden !important;
 }
